# RevItUpSFML

./: .env.template  .gitignore  CMakeLists.txt  SETUP.md  config.example.txt
.github/workflows/: ci.yml
assets/: desktop.ini
src/: main.cpp  search.cpp
